# chip8-emulator

./: .editorconfig  .gitignore  Cargo.toml
chip8-core/: Cargo.toml
chip8-core/src/: instructions.rs  lib.rs  program.rs
chip8-terminal/: Cargo.toml
core/: Cargo.toml
core/src/: instructions.rs  lib.rs  program.rs
scripts/: download-roms
wasm/: Cargo.toml
wasm/src/: lib.rs
web/: index.html  index.js  package-lock.json  package.json  tsconfig.json  vue.config.js
web/public/: index.html
web/src/: main.ts
web/src/components/: app.vue  view.vue
